# glfwWindow

./: .gitignore  CMakeLists.txt  Makefile
lib/glad/: Makefile  cmake_install.cmake
src/: Basic.shader  Callback.h  main.cpp  state.h  window.c
src/gfx/: gfx.h  window.cpp  window.h
src/util/: util.h
